inserting less compressed .svgs

--- a/gdd.html
+++ b/gdd.html
@@ -4,11 +4,22 @@
   <meta charset="UTF-8">
   <title>Game Design Document</title>
   <style>
-    body { margin:0; padding:0; display:flex; }
-    img {  height:auto; }
+    body {
+      margin:0; 
+      padding:0; 
+      display:flex; 
+      flex-direction: row;
+      align-items: flex-start;
+    }
+    img {
+      height:auto;
+      vertical-align: top;
+      display: block;
+    }
   </style>
 </head>
 <body>
-  <img src="game dev.excalidraw(1).svg" alt="Game Design Document">
+  <img src="summary.svg" alt="game_board">
+  <img src="inspiration.svg" alt="Mood Board">
 </body>
 </html>
