--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     body {
       margin:0; 
       padding:0; 
-      display:flex; 
-      flex-direction: row;
-      align-items: flex-start;
+      display:flex;
     }
     .canvas{
-
+      display: flex;          /* row layout by default */
+      flex-direction: row; /* stack sections vertically */
     }
     .row{
       display: flex;
@@ -33,17 +32,36 @@
   <div class="canvas">
 <!--ROW 1-->
     <div class="row">
-      <img src="summary.svg" alt="game_board">
+      <img src="game_board.excalidraw.svg" alt="game_board">
     </div>
 
 <!--row 2-->
     <div class="row">
       <div class="column">
-        <img src="inspiration_one.svg">
-        <img src="inspiration_two.svg">
+        <img src="inspo.excalidraw.svg" alt="Inspiration">
+        <img src="background.excalidraw.svg" alt="Similar Games">
       </div>
     </div>
-
+<!--ROW 3-->
+    <div class="row">
+      <img src="game_concept.excalidraw.svg" alt="Game Concept">
+    </div>
+<!--ROW 4-->
+    <div class="row">
+      <img src="gampelay.svg" alt="gampelay">
+    </div>
+<!--ROW 5-->
+    <div class="row">
+      <img src="mechanics.excalidraw.svg" alt="Game mechanics">
+    </div>
+<!--ROW 6-->
+    <div class="row">
+      <img src="justification.excalidraw.svg" alt="Product justification">
+    </div>
+<!--ROW 7-->
+    <div class="row">
+      <img src="timeline.excalidraw.svg" alt="Game timeline">
+    </div>
   </div>
 </body>
 </html>
